--- a/android/TurnTracker/app/src/main/res/values/strings.xml
+++ b/android/TurnTracker/app/src/main/res/values/strings.xml
@@ -73,4 +73,6 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="tasks_empty">You don\'t have any tasks.\n\nTap to refresh.</string>
+    <string name="tasks_failed">Failed to get tasks.\n\nTap to refresh.</string>
 </resources>
