Made the main layout inside the drawerlayout clickable in an effort to fix a bug where the drawer sometimes gets stuck slightly ajar

--- a/android/TurnTracker/app/src/main/res/values/strings.xml
+++ b/android/TurnTracker/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
 
     <!-- Strings related to Settings -->
 
-    <string name="user_list_label">Users</string>
+    <string name="user_list_label">Order</string>
     <string name="turn_list_label">Turns</string>
 
     <!-- Example General settings -->
