--- a/android/TurnTracker/app/src/main/res/values/strings.xml
+++ b/android/TurnTracker/app/src/main/res/values/strings.xml
@@ -87,7 +87,8 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="tasks_empty">You don\'t have any tasks.\n\nTap to refresh.</string>
     <string name="tasks_failed">Failed to get tasks.\n\nTap to refresh.</string>
-    <string name="turns_empty">No turns found.</string>
+    <string name="status_empty">No status found.</string>
+    <string name="status_failed">Failed to get status.\n\nTap to refresh.</string>
     <string name="title_activity_login_settings">Login Settings</string>
 
     <string name="pref_title_display_name">Display name</string>
