--- a/android/TurnTracker/app/src/main/res/values/strings.xml
+++ b/android/TurnTracker/app/src/main/res/values/strings.xml
@@ -21,7 +21,8 @@
     <string name="title_activity_login">Login to Turn Tracker</string>
 
     <!-- Task -->
-    <string name="user_list_label">Order</string>
+    <string name="user_order_list_label">Order</string>
+    <string name="user_list_label">Users</string>
     <string name="turn_list_label">Turns</string>
     <string name="create_task_title">Create Task</string>
     <string name="edit_task_title">Edit Task</string>
