Disable network settings when logged in. This prevents users from "logging in" to another server that has a user with the same ID

--- a/android/TurnTracker/app/src/main/res/values/strings.xml
+++ b/android/TurnTracker/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="title_activity_login_settings">Login Settings</string>
 
     <!-- General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_header_network">Network</string>
     <string name="pref_title_server_ip">Server IP Address</string>
     <string name="pref_default_server_ip">192.168.2.11</string>
     <string name="pref_title_server_port">Server Port</string>
