--- a/android/TurnTracker/app/src/main/res/values/strings.xml
+++ b/android/TurnTracker/app/src/main/res/values/strings.xml
@@ -58,4 +58,11 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="notifications_enabled_description">Notifications are enabled for this task</string>
     <string name="notifications_disabled_description">Notifications are disabled for this task</string>
+    <string name="reminders_enabled_description">Reminders are enabled for this task</string>
+    <string name="reminders_disabled_description">Reminders are disabled for this task</string>
+    <string name="enable_notifications_mine">Notifications When It\'s My Turn</string>
+    <string name="enable_notifications_all">Notifications After Any Turn</string>
+    <string name="disable_notifications">Notifications Off</string>
+    <string name="enable_reminders">Reminders On</string>
+    <string name="disable_reminders">Reminders Off</string>
 </resources>
