add dialogs to interact with user when writing and overwriting nfc tags

--- a/android/TurnTracker/app/src/main/res/values/strings.xml
+++ b/android/TurnTracker/app/src/main/res/values/strings.xml
@@ -73,4 +73,6 @@
     <string name="label_modified">Modified</string>
     <string name="label_creator">Creator</string>
     <string name="label_id">ID</string>
+    <string name="action_take_turn_in_past">Take Turn In Past</string>
+    <string name="write_nfc_tag">Write NFC Tag</string>
 </resources>
