Stop using a bitmap for the notification large icon because it's too big and throws TransactionTooLargeException

--- a/android/TurnTracker/app/src/main/res/values/strings.xml
+++ b/android/TurnTracker/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="label_id">ID</string>
     <string name="action_take_turn_in_past">Take Turn In Past</string>
     <string name="write_nfc_tag">Write NFC Tag</string>
+    <string name="test_notification">Test Notification</string>
 </resources>
